API - auth by token
